chore: added some changes to html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h2>Bem-vindo</h2>
-        <p>Selecione um mercado, mês e ano para exibir os dados nos gáficos</p>
+        <p>Selecione um mercado, mês e ano para exibir os dados nos gáficos.</p>
         <form id="filtroForm">
             <label for="mercado">Mercado:</label>
             <select name="mercado" id="mercado">
